k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-check
  labels:
    app: url-check
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: url-check
